--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <p>{{name}}</p>
+            <p>This site was created by {{name}}.  It uses data from mapbox.com and darksky.net!</p>
         </div>
 
         {{>footer}}
